# IoAbstraction

./: .gitignore  BasicIoAbstraction.cpp  BasicIoAbstraction.h  BasicIoAbstraction.vcxitems  CONTRIBUTING.md  EepromAbstraction.h  EepromAbstractionWire.cpp  EepromAbstractionWire.h  IoAbstraction.cpp  IoAbstraction.h  IoAbstractionWire.cpp  IoAbstractionWire.h  README.md  SwitchInput.cpp  SwitchInput.h  TaskManager.cpp  TaskManager.h  doxygen.conf  ioAbstractionCoreTypes.h  keywords.txt  library.json  library.properties  merge-bin.py  platformio-test.ini  platformio.ini  readme.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: platformio.yml  test.yml
cmake/: CMakeLists.txt
docs/: header.html
examples/abstractingPinsPCF8574/: abstractingPinsPCF8574.ino
examples/analogExample/: analogExample.ino
examples/arduinoEEPROMExample/: arduinoEEPROMExample.ino
examples/avrEepromExample/: avrEepromExample.ino
examples/aw9523Example/: aw9523Example.ino
examples/btreeCollection/: btreeCollection.ino
examples/buttonRotaryEncoder/: buttonRotaryEncoder.ino
examples/dfRobotAnalogInSwitches/: dfRobotAnalogInSwitches.ino
examples/dfRobotRotaryEncoder/: dfRobotRotaryEncoder.ino
examples/directPortAccess/: directPortAccess.ino
examples/directPortAcess/: directPortAccess.ino
examples/directionOnlyEncoder/: directionOnlyEncoder.ino
examples/eepromExample/: eepromExample.ino
examples/encoderSwitch/: encoderSwitch.ino
examples/esp32touchSwitches/: esp32touchSwitches.ino
examples/example8574/: example8574.ino  example8574.sln
src/: AnalogDeviceAbstraction.cpp  AnalogDeviceAbstraction.h  ArduinoEEPROMAbstraction.h  BasicIoAbstraction.cpp  BasicIoAbstraction.h  DeviceEvents.h  DfRobotInputAbstraction.h  EepromAbstraction.cpp  EepromAbstraction.h  EepromAbstractionWire.cpp  EepromAbstractionWire.h  IoAbstraction.cpp  IoAbstraction.h  IoAbstractionWire.cpp  IoAbstractionWire.h  IoLogging.cpp  IoLogging.h  JoystickSwitchInput.h  KeyboardManager.cpp  KeyboardManager.h  MockEepromAbstraction.h  MockIoAbstraction.h  MockTaskManager.h  NegatingIoAbstraction.h  PlatformDetermination.h  PlatformDeterminationWire.h  PrintCompat.h  ResistiveTouchScreen.cpp  ResistiveTouchScreen.h  SimpleCollections.cpp  SimpleCollections.h  SwitchInput.cpp  SwitchInput.h  TaskManager.cpp  TaskManager.h  TextUtilities.cpp  TextUtilities.h  wireHelpers.cpp  wireHelpers.h
src/extras/: SPIHelper.h  (+1 more)
(+92 files in other folders)
